pratique/2019-pu-f2-supermercado/2019-pu-f2-supermercado-comp.txt
2019-pu-f2-supermercado.cpp: In function ‘int main()’:
2019-pu-f2-supermercado.cpp:20:22: error: ‘setprecision’ was not declared in this scope
   20 |     cout << fixed << setprecision(2) << prices[0].first * 1000 << endl;
      |                      ^~~~~~~~~~~~
